--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"pocketbase": "^0.21.2"
+		"masonry-layout": "^4.2.2",
+		"pocketbase": "^0.21.2",
+		"unsplash-js": "^7.0.19"
 	}
 }
